# Meta_Personal_Data_Collector

./: .cred.example  .gitignore  README.md  pyproject.toml  run.bat  run.sh
src/fb_image_extractor/: __init__.py  app.py  cli.py  extractor.py  instagram.py
tests/: test_extractor.py  test_instagram.py
